Update Gradle plugins
ktlint was updated in particular to fix a bug which prevented building
this project normally on Windows